--- a/index.html
+++ b/index.html
@@ -30,36 +30,9 @@
     tr:hover {
       background-color: #e2e2e2;
     }
-  </style>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin: 20px 0;
-    }
-
-    th,
-    td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: center;
-    }
-
-    th {
-      background-color: #f4f4f4;
-      font-weight: bold;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-
-    tr:hover {
-      background-color: #e2e2e2;
-    }
 
     nav {
-      background-color: green;
+      background-color: blue;
       /* Color de fondo */
       padding: 10px;
     }
@@ -89,8 +62,6 @@
       /* Cambio de color al pasar el cursor */
       border-radius: 5px;
     }
-
-    tiene menú contextual
   </style>
 
   <title>Computación Web 2º Bach</title>
@@ -100,19 +71,19 @@
 <body>
   <nav>
     <ul>
-      <a href="">Inicio</a>
-      <a href="#Competidores">Competidores</a>
-      <a href="#Batallas">Batallas</a>
-      <a href="#Contacto">Contacto</a>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="competidores.html">Competidores</a></li>
+      <li><a href="batallas.html">Batallas</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
   <header>
     <h1>Computación Web 2ºBach</h1>
   </header>
   <h2>LAS MEJORES BATALLAS DEL SUR DE MADRID</h2>
-  <p>Página inicial para que conozcas un poco mas batallas de gallos.</p>
+  <p>Página inicial para que conozcas un poco más sobre las batallas de gallos.</p>
   <p>¡Prepárate para lo que se viene!</p>
-  <p> <img src="https://yt3.googleusercontent.com/gpuwM6LNWntzBEzJuFScn1DxkRi48s_aTujsna7-ht1ZHdTK3bXkPl4S2sUXQBEA2xYAYjx_=s160-c-k-c0x00ffffff-no-rj" alt="Imagen con tamaño" style="width: 20%; height:auto;"> </p>
+  <p><img src="https://yt3.googleusercontent.com/gpuwM6LNWntzBEzJuFScn1DxkRi48s_aTujsna7-ht1ZHdTK3bXkPl4S2sUXQBEA2xYAYjx_=s160-c-k-c0x00ffffff-no-rj" alt="Imagen con tamaño" style="width: 20%; height:auto;"></p>
   <p>¡Disfruta de esta batalla!</p>
   <iframe src="https://www.youtube.com/embed/VgxU_K7JGLk?si=qsYsawTz259228AO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -131,136 +102,24 @@
         <td></td>
         <td>Benja</td>
         <td>5</td>
-        <td>leganes</td>
+        <td>Leganés</td>
       </tr>
       <tr>
         <td></td>
         <td>Souto</td>
         <td>10</td>
-        <td>aluche</td>
+        <td>Aluche</td>
       </tr>
       <tr>
         <td></td>
-        <td>suve</td>
+        <td>Suve</td>
         <td>20</td>
-        <td>las retamas</td>
+        <td>Las Retamas</td>
       </tr>
     </tbody>
   </table>
 </body>
 
-<div class="container">
-  <div id="Competidores">
-    <h2>📰 Noticias Destacadas de los COMPETIDORES</h2>
-    <div class="noticia">
-      <h3>Incorporación de nuevos competidores, ¿ Quieres participar?</h3>
-      <p>Rellena el formulario siguiente</p>
-    </div>
-  </div>
-</div>
-<title>Formulario de Contacto</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #f0f8f0;
-  }
-
-  .formulario {
-    background-color: white;
-    padding: 25px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-
-  .campo {
-    margin-bottom: 15px;
-  }
-
-  label {
-    display: block;
-    margin-bottom: 5px;
-    color: #2e8b57;
-    font-weight: bold;
-  }
-
-  input[type="text"],
-  textarea {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-  button {
-    background-color: #2e8b57;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  button:hover {
-    background-color: #3cb371;
-  }
-</style>
-
-<body>
-  <div class="formulario">
-    <h2 style="color: #2e8b57; margin-bottom: 20px;">📝 Contacta con nosotros</h2>
-
-    <form>
-      <div class="campo">
-        <label for="apodo">Apodo:</label>
-        <input type="text" id="apodo" name="apodo" placeholder="Ej: 'El Tanque'" required>
-      </div>
-
-      <div class="campo">
-        <label for="instagram">Usuario de Instagram:</label>
-        <input type="text" id="instagram" name="instagram" placeholder="@tucuenta" required>
-      </div>
-
-      <div class="campo">
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="4" placeholder="Escribe tu mensaje aquí..." required></textarea>
-      </div>
-
-      <button type="submit">Enviar</button>
-    </form>
-  </div>
-</body>
-
-<div class="container">
-  <div id="Batallas">
-    <h2>📰 Noticias Destacadas de las BATALLAS</h2>
-    <div class="noticia">
-      <h3>¿ Quieres ver las batallas que hemos tenido?</h3>
-      <p>¡Disfruta de la primera batalla!</p>
-      <iframe src="https://www.youtube.com/embed/VgxU_K7JGLk?si=qsYsawTz259228AO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <p>¡Disfruta de la segunda batalla!</p>
-      <iframe src="https://www.youtube.com/embed/nz4AbXK5IKY?si=1T7rkLimNDwQIuww" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <p>¡Disfruta de la tercera batalla!</p>
-      <iframe src="https://www.youtube.com/embed/mFXGEksu8Pg?si=4iio_q2tGtTHzuUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div id="Contacto">
-    <h2>📰 CONTACTO</h2>
-    <div class="noticia">
-      <h3>Nos puedes contactar en la siguiente dirección de correo electronico: batallasdebancos@gmail.com</h3>
-      <p>o través del instagram @batallas de bancos</p>
-      <h2>📰 CONTAMOS CONTIGO</h2>
-
-    </div>
-  </div>
-</div>
 <footer>
   <p>&copy; 2025 Computación Web - 2º Bachillerato</p>
 </footer>
