--- a/competidores.html
+++ b/competidores.html
@@ -11,5 +11,15 @@
     <h3>Incorporación de nuevos competidores, ¿Quieres participar?</h3>
     <p>Rellena el formulario siguiente</p>
   </div>
+  <div class="form-container">
+        <h2>Formulario de Contacto</h2>
+        <form action="#">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <input type="submit" value="Enviar">
+        </form>
+    </div>
 </body>
 </html>
